# email-triage-env

./: Dockerfile  README.md  SOLUTION_SUMMARY.md  app.py  email_triage_env.py  index.html  inference.py  openenv.yaml  pyproject.toml  requirements.txt  results.json  server.py
server/: app.py
